# kubectl-wait

./: Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
src/: main.rs
