[package]
name = "kubectl-wait"
version = "0.1.3"
edition = "2024"
rust-version = "1.89.0"
description = "pleme-io GitHub Action — typed kubectl wait wrapper with structured output"
license = "MIT"
authors = ["drzzln <drzzln@protonmail.com>"]
repository = "https://github.com/pleme-io/kubectl-wait"

[[bin]]
name = "kubectl-wait"
path = "src/main.rs"

[dependencies]
pleme-actions-shared = { git = "https://github.com/pleme-io/pleme-actions-shared" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[lints.clippy]
pedantic = "warn"
